[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
tokio = { version = "1.18.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
